Prevent global scrollbar, only menu should need a scrollbar.

--- a/153957_theme/static/css/style.css
+++ b/153957_theme/static/css/style.css
@@ -36,6 +36,8 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  overflow-y: auto;
+  max-height: 99vh;
 }
 
 .menu ul {
@@ -75,6 +77,8 @@ a:hover {
   .menu {
     font-size: 20px;
     line-height: 30px;
+    overflow-y: initial;
+    max-height: none;
   }
 
   .menu li {
